--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
-hello world
+<h1>Navneet Gupta</h1>
+<h1><img src="C:\Users\ng250029\Desktop\ng.jpg" alt="Navneet Gupta young picture" width="300" height="300" /></h1>
+<ul>
+<li>Email Address - <a href="mailto:ng250029@ncr.com">ng250029@ncr.com</a></li>
+<li>Phone Number - 678-630-5695</li>
+<li>linkedin - <a href="https://linkedin.com/navneetgupta">https://linkedin.com/navneetgupta</a></li>
+</ul>
+<p>Qualification -</p>
+<ol>
+<li>Data Analytics Diploma from GT</li>
+<li>Remedy Adminstrator</li>
+<li>ITSM consultant</li>
+</ol>
+<table>
+<tbody>
+<tr>
+<td>1first column</td>
+<td>1second colum</td>
+<td>1third column</td>
+</tr>
+<tr>
+<td>2first column</td>
+<td>2 second column</td>
+<td>2nd column</td>
+</tr>
+<tr>
+<td>3rd first coulmn</td>
+<td>3rd second</td>
+<td>3rd third</td>
+</tr>
+</tbody>
+</table>
+<p>&nbsp;</p>
