--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <h1>Navneet Gupta</h1>
-<h1><img src="C:\Users\ng250029\Desktop\ng.jpg" alt="Navneet Gupta young picture" width="300" height="300" /></h1>
+<h1><img src="ng.jpg" alt="Navneet Gupta young picture" width="300" height="300" /></h1>
 <ul>
 <li>Email Address - <a href="mailto:ng250029@ncr.com">ng250029@ncr.com</a></li>
 <li>Phone Number - 678-630-5695</li>
